fix bottom spacing hopefully

--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -410,7 +410,6 @@ nav.navbar .container-fluid {
   flex-direction: column;
   width: 100%;
   text-align: center;
-  padding-bottom: 5rem;
 }
 
 .cast-info hr {
